[package]
name = "libkdbx-rs"
version = "0.0.1"
edition = "2018"

repository = "https://github.com/louib/libkdbx-rs"
description = "Rust wrapper for the libkdbx library."

keywords = [
  "keepass",
  "kdb",
  "kdbx"
]

readme = "README.md"

include = [
  "src/",
  "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
